--- a/index.css
+++ b/index.css
@@ -91,10 +91,11 @@ p {
 
 /* Aside  */
 .aside {
-    padding-left: 0;
+    /* margin: 0; */
+    padding-left: 20px;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     width: 200px;
     box-shadow: 0 0 6px black;
     position: fixed;
@@ -110,11 +111,14 @@ p {
 
 .dashboard-ul {
     list-style: none;
+    flex-direction: column;
+    padding-left: 0;
 }
 
 .dashboard-items {
-    gap: 20px;
+    /* gap: 20px; */
     margin: 10px;     
+    align-items: center;
    
 }
 
@@ -128,6 +132,7 @@ p {
 
 .aside-icons {
     width: 25px;
+    margin-right: 10px;
 }
 
 
@@ -135,12 +140,13 @@ p {
 .nav {
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 85vw;
     margin-right: 0;
+    padding: 20px;
     position: fixed;
     top: 0;
     left: 200px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .nav .main-logo {
@@ -230,7 +236,7 @@ p {
 
 /* Employees according to Dept */
 .staff {
-    grid-area: staff;
+    grid-area: staff;  
 }
 
 .staff-dept {
@@ -308,6 +314,7 @@ p {
 table {
     width: 100%;
     border-spacing: 0;
+    text-align: left;
 }
 
 thead {
@@ -338,6 +345,11 @@ td {
         flex-direction: column;
         max-width: 100%;
     }
+    main {
+        max-width: 100%;
+        margin: 0 auto;
+        z-index: -1;
+    }
 
     .white {
         background-color: transparent;
@@ -346,9 +358,15 @@ td {
     .hidden {
         display: none;
     }
+    .dashboard-ul {
+        
+    }
    
     .dashboard-ul .dashboard-items.hidden {
         display: none;
+    }
+    .aside-icons {
+        margin-right: 0;
     }
 
 
@@ -356,6 +374,7 @@ td {
         width: 100%;
         background-color: #FFFFFF;
         left: 0;
+        z-index: 1;
     }
 
     .nav .main-logo {
@@ -371,12 +390,14 @@ td {
     }
 
     .dashboard-ul {
-        display: flex;
-        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
     }
 
     .dashboard-items {
+        align-self: center;
         background-color: #FFFFFF;
         border-radius: 5px;  
     }
@@ -387,11 +408,6 @@ td {
         margin: 0 5px;
         padding: 5px;
         
-    }
-
-    main {
-        width: 100%;
-        margin: 0 auto;
     }
 
     .dept-list-wrapper {
@@ -411,5 +427,18 @@ td {
         background-color: #FFFFFF;
         padding: 30px;
         border-radius: 5px;
+    }
+}
+
+/* Media Queries for Large Screens */
+@media screen and (min-width: 1680px) {
+    .nav {
+        width: 88vw;
+    }
+    .patient-visit,
+    .staff,
+    .dept-list-wrapper {
+        height: 40vh;
+        padding: 60px;
     }
 }
